# pydanttention

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/pydanttention/: __init__.py  config.py  constants.py  main.py  prediction.py  sources.py  unused.py  vogel_manual_transformer.py
src/pydanttention/models/: attention.py  config.py  tokens.py  transformer.py
src/pydanttention/models/attention/: block.py  main.py
src/pydanttention/models/ops/: base.py  main.py  simple.py
src/pydanttention/original/: vogel.py
tests/: integration_test.py  original_implementation_test.py  test_original_program.py  token_test.py
