[project]
name = "pydanttention"
dynamic = ["version"]
description = "Transformer model attention in Pydantic."
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
keywords = [
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    'Framework :: Pydantic',
    'Framework :: Pydantic :: 2',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "pydantic>=2.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/lmmx/pydanttention"
Repository = "https://github.com/lmmx/pydanttention.git"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/pydanttention/__init__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]

[tool.isort]
known_first_party = ["pydanttention"]
